# vue-fastapi-admin

./: .gitignore  Dockerfile  LICENSE  Makefile  README-en.md  README.md  pyproject.toml  requirements.txt  run.py  run.sh  uvicorn_loggin_config.json
.github/workflows/: docker-image.yml
app/: __init__.py
app/api/: __init__.py
app/api/v1/: __init__.py  ca_management.py  certificate_requests.py  certificate_utils.py  certificates_api.py  issued_certificates.py
app/api/v1/apis/: __init__.py  apis.py
app/api/v1/auditlog/: __init__.py  auditlog.py
app/api/v1/base/: __init__.py  base.py
app/api/v1/depts/: __init__.py  depts.py
app/api/v1/menus/: __init__.py  menus.py
app/api/v1/roles/: __init__.py  roles.py
app/api/v1/users/: __init__.py  users.py
app/controllers/: __init__.py  api.py  certificate_request.py  dept.py  issued_certificate.py  menu.py  role.py  root_ca_certificate.py  user.py
app/core/: bgtask.py  certificate_utils.py  certs.py  crud.py  ctx.py  dependency.py  exceptions.py  init_app.py  ldap_service.py  middlewares.py
app/core/auth/: ldap_mock.py
app/log/: __init__.py  log.py
app/models/: __init__.py  admin.py  base.py  certificate.py  certificates.py  enums.py
app/schemas/: __init__.py  apis.py  base.py  certificate.py  certificates.py  depts.py  login.py  menus.py  roles.py  users.py
app/settings/: __init__.py  config.py
app/templates/cn/: reset_password.html
app/templates/en/: reset_password.html
app/utils/: jwt.py  jwt_utils.py  password.py
deploy/: entrypoint.sh  web.conf
docs/: CERTIFICATE_SYSTEM_GUIDE.md
migrations/models/: 0_20231126190227_init.py  1_20231126194204_add_menu_lang_key.py
tests/: conftest.py  test_certificate_utils.py  test_certificates_api.py  test_ldap_mock.py
tests/api/: test_certificate_requests_api.py
tests/core/: test_certs.py
web/: .env  .env.development  .env.production  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  stats.html  vite.config.js
web/i18n/: index.js
web/i18n/messages/: cn.json  en.json
web/public/resource/: loading.js
web/settings/: proxy-config.js  theme.json
web/src/: main.js
web/src/api/: index.js
web/src/assets/js/: icons.js
web/src/components/common/: AppFooter.vue  AppProvider.vue  LoadingEmptyWrapper.vue  ScrollX.vue
web/src/components/icon/: IconPicker.vue  TheIcon.vue
web/src/components/query-bar/: QueryBar.vue  QueryBarItem.vue
web/src/components/table/: CrudModal.vue  CrudTable.vue
web/src/composables/: useCRUD.js
web/src/directives/: index.js  permission.js
web/src/i18n/: index.js
web/src/i18n/messages/: cn.json  en.json  index.js
web/src/layout/: index.vue
web/src/layout/components/header/: index.vue
web/src/layout/components/header/components/: FullScreen.vue  GithubSite.vue  Languages.vue  UserAvatar.vue
web/src/layout/components/tags/: index.vue
web/src/router/: index.js
web/src/router/guard/: auth-guard.js  index.js
web/src/router/routes/: index.js
web/src/store/modules/app/: index.js
web/src/store/modules/permission/: index.js
web/src/store/modules/tags/: helpers.js  index.js
web/src/store/modules/user/: index.js
web/src/utils/: constants.js
web/src/utils/auth/: token.js
web/src/utils/common/: index.js  useResize.js
web/src/utils/http/: helpers.js  index.js  interceptors.js
web/src/utils/storage/: index.js
web/src/views/admin/certificate/: CAManagement.vue  RequestManagement.vue
web/src/views/certificate/: MyRequestsList.vue  RequestForm.vue
web/src/views/error-page/: 401.vue  403.vue  404.vue  500.vue
web/src/views/forgot-password/: index.vue
web/src/views/login/: index.vue
web/src/views/profile/: index.vue
web/src/views/reset-password/: index.vue
web/src/views/system/: route.js
web/src/views/system/api/: index.vue
web/src/views/system/auditlog/: index.vue
web/src/views/system/dept/: index.vue
web/src/views/system/menu/: index.vue
web/src/views/system/role/: index.vue
web/src/views/system/user/: index.vue
web/src/views/tools/: PemToPfxConverter.vue
web/src/views/top-menu/: index.vue
web/src/views/workbench/: index.vue
(+1 files in other folders)
